--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -143,15 +143,16 @@
                         <input type="number" style="margin-left:8px;margin-right:-4px;width:200px;"
                             value.bind="promoted_story_expiration" change.delegate="set_promoted_story_expiration()" />
                     </div>
-                    <div style="margin-bottom:5px;">
+                    <div style="margin-bottom:5px;display:flex;">
                         <label style="margin-left:8px;width:200px;">
                             ${'admin.cover-photo' & t}
                         </label>
-                        <a click.delegate="set_cover_photo()">
-                            <img if.bind="cover_photo" src.bind="cover_photo" width="100"/>
-                            <label if.bind="!cover_photo">
-                                Select a cover photo
-                            </label>
+                        <a click.delegate="set_cover_photo($event)">
+                            <img if.bind="cover_photo" src.bind="cover_photo"  style="cursor:pointer;" width="202"/>
+                            <p if.bind="!cover_photo">
+                                ${'admin.select-cover-photo1' & t}<br>
+                                ${'admin.select-cover-photo2' & t}<br>
+                            </p>
                         </a>
                     </div>
                 </div>
