--- a/src/resources/elements/multi-select/edit-topic.html
+++ b/src/resources/elements/multi-select/edit-topic.html
@@ -1,5 +1,5 @@
 <template>
-    <ux-dialog style="padding:12px;">
+    <ux-dialog css="padding:12px;direction:${theme.rtltr};">
         <ux-dialog-header>
             <h3>${title}</h3>
         </ux-dialog-header>
