--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="form-group toolbar" if.bind="user.privileges.TESTER">
                                 <button t="[title]photos.set-slideshow-topics" class="btn btn-basic btn-md"
-                                        click.delegate="set_slideshow_topics($event)"><i class="fa fa-gallry-thumbnails fa-xs"></i></button>
+                                        click.delegate="set_slideshow_topics($event)"><i class="fa fa-projector fa-lg"></i></button>
                             </div>
                             <div class="form-group" if.bind="! editing_filters">
                                 <button class="btn btn-basic btn-sm btn-framed" 
