--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -118,12 +118,14 @@
             <div class="col-md-7" ref="story_box" style="padding-right:0;">
                 <div class="justified-story full-story">
                     <div style="padding-top:8px;margin-left:15px;">
-                        <div class="col-md-4 col-md-offset-8" if.bind="story.source">
+                        <div class="col-md-4 col-md-offset-8" if.bind="story.source" show.bind="theme.is_desktop">
                             <span
-                                css="float:${theme.same_dir};direction:${story_dir};padding-right:12px;padding-left:12px;">${story.source}:</span>
+                                css="float:${theme.same_dir};direction:${story_dir};padding-right:12px;padding-left:12px;">
+                                ${story.source}:
+                            </span>
                         </div>
                     </div>
-                    <div if.bind="! user.editing" style="padding-right:15px;padding-top:8pxl;">
+                    <div if.bind="! user.editing" style="padding-right:15px;padding-top:8px;">
                         <div class="fr-view" dir="${story_dir}">
                             <div class="big-story-panel ${theme.font_size}" style="position:relative;">
                                 <p class="${story_dir} ${highlight_on}">
@@ -134,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div if.bind="user.editing" style="padding-right:15px;padding-top:8pxl;">
+                    <div if.bind="user.editing" style="padding-right:15px;padding-top:8px;">
                         <div class="fr-view" dir="${story_dir}">
                             <div class="big-story-panel ${theme.font_size}" style="position:relative;">
                                 <editable if.bind="user.editing"
