exclusive site. youtube player - wip.

--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -34,7 +34,7 @@
                         <th>${'admin.delete' & t}</th>
                     </tr>
                 </thead>
-                <tbody style="height:600px;overflow:auto;">
+                <tbody>
                     <tr repeat.for="item of $displayData">
                         <td>${item.id}</td>
                         <td>${item.email}</td>
