--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -7,13 +7,26 @@
             can_mark.bind="user.editing"
             location-changed.delegate="location_changed($event)"
     >
-
     </my-map-->
-    <div style="width: 600px;margin-right:auto;margin-left:auto">
+    <div style="display:flex">
+        <button class="btn btn-${use_html5 ? 'primary' : 'basic'}" click.delegate="use_html5=true">Html5</button>
+        <button class="btn btn-${use_html5 ? 'basic' : 'primary'}" click.delegate="use_html5=false">Youtube</button>
+    </div>
+    <div>
         <button class="btn btn-primary" click.delegate="make_step($event)">Step forward</button>
         <progress-bar final.bind="final" current.bind="current"></progress-bar>
-        <yt-player player.bind="player" video-id="GBpibo4TEdE" ref="yt_player"></yt-player>
-        <h3 if.bind="player.paused">Paused</h3>
-        <h1>State: ${player.playerState}</h1>
     </div>
+    <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="! use_html5">
+        <yt-player player.bind="yt_player" video-id="GBpibo4TEdE"></yt-player>
+        <h3 if.bind="yt_player.paused">Paused</h3>
+        <h1>State: ${yt_player.playerState}</h1>
+    </div>
+    <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="use_html5">
+        <!--html-player player.bind="player" video_source.bind="html5_source" ref="html5_player"></html-player-->
+        <html-player video_source.bind="html5_source" player.bind="html5_player">BOOM</html-player>
+        <h3 if.bind="html5_player.paused">Paused</h3>
+        <h1>State: ${html5_player.playerState}</h1>
+    </div>
+
+
 </template>
