--- a/src/resources/elements/quiz/edit-question.html
+++ b/src/resources/elements/quiz/edit-question.html
@@ -1,5 +1,5 @@
 <template>
-    <ux-dialog style="padding:12px;">
+    <ux-dialog css="padding:12px;direction:${theme.rtltr}">
         <ux-dialog-header>
             <h3>${'quiz.edit-question' & t}</h3>
         </ux-dialog-header>
