no more paging by clicking margin

--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -130,8 +130,8 @@
                             <div class="big-story-panel ${theme.font_size}" style="position:relative;">
                                 <p class="${story_dir} ${highlight_on}">
                                     <render-story if.bind="highlightedHtml" html.bind="highlightedHtml"></render-story>
-                                    <div class="page-control next" click.trigger="next_page($event, +1)"></div>
-                                    <div class="page-control prev" click.trigger="next_page($event, -1)"></div>
+                                    <!--div class="page-control next" click.trigger="next_page($event, +1)"></div>
+                                    <div class="page-control prev" click.trigger="next_page($event, -1)"></div-->
                                 </p>
                             </div>
                         </div>
