--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -33,11 +33,14 @@
             </div>
             <div class="video-area">
                 <div class="video-display-area">
-                    <video ref="video_element" id="video-element" width="640" height="480" controls>
+                    <video ref="video_element" id="video-element" width="640" height="480" controls  if.bind="video_type!='youtube'">
                       <source src.bind="video_source" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
+                    <yt-player if.bind="video_type=='youtube'" player.bind="yt_player" video-id.bind="video_src" player_is_ready.bind="player_is_ready"></yt-player>
+
                 </div>
+
                 <button class="btn btn-primary" click.delegate="add_cue_point()" if.bind="user.editing" disabled.bind="(!video_element.paused) || already_in">
                     ${'videos.add-cue' & t}
                 </button>
