--- a/src/resources/elements/video/yt-player.html
+++ b/src/resources/elements/video/yt-player.html
@@ -1,5 +1,4 @@
 <template>
-    <div id="ytplayer" style="height:390px;width:640px">
-
-    </div>
+    <compose view-model="../../../services/yt-keeper">
+    </compose>
 </template>
