--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -16,7 +16,7 @@
         <button class="btn btn-primary" click.delegate="make_step($event)">Step forward</button>
         <progress-bar final.bind="final" current.bind="current"></progress-bar>
     </div>
-    <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="! use_html5">
+    <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="false && ! use_html5">
         <yt-player player.bind="yt_player" video-id="GBpibo4TEdE"></yt-player>
         <h3 if.bind="yt_player.paused">Paused</h3>
         <h1>State: ${yt_player.playerState}</h1>
@@ -28,5 +28,7 @@
         <h1>State: ${html5_player.playerState}</h1>
     </div>
 
+    <compose view-model="../services/yt-keeper"  if.bind="! use_html5" ref="youtube_player"></compose>
+    <!--yt-player player.bind="yt_player"></yt-player-->
 
 </template>
