--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -19,7 +19,8 @@
     <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="false && ! use_html5">
         <yt-player player.bind="yt_player" video-id="GBpibo4TEdE"></yt-player>
         <h3 if.bind="yt_player.paused">Paused</h3>
-        <h1>State: ${yt_player.playerState}</h1>
+        <h1>State: ${ytKeeper.playerState}</h1>
+        <h2 if.bind="ytKeeper.paused">Paused</h2>
     </div>
     <div style="width: 600px;margin-right:auto;margin-left:auto" if.bind="use_html5">
         <!--html-player player.bind="player" video_source.bind="html5_source" ref="html5_player"></html-player-->
@@ -29,6 +30,8 @@
     </div>
 
     <compose view-model="../services/yt-keeper"  if.bind="! use_html5" ref="youtube_player"></compose>
+    <h3 if.bind="ytKeeper.paused">Paused</h3>
+    <h1>State: ${ytKeeper.state}</h1>
     <!--yt-player player.bind="yt_player"></yt-player-->
 
 </template>
