--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -103,11 +103,11 @@
                     <compose view-model="../services/yt-keeper" if.bind="video_type=='youtube'"></compose>
                 </div>
 
-                <button class="btn btn-primary" click.delegate="add_cue_point()" if.bind="user.editing"
+                <button class="btn btn-primary" click.delegate="add_cue_point()" if.bind="user.editing && user.privileges.VIDEO_EDITOR"
                         disabled.bind="(!player.paused) || already_in">
                     ${'videos.add-cue' & t}
                 </button>
-                <div class="cue-points-area table-scroller" if.bind="user.editing || cue_points.length>0">
+                <div class="cue-points-area table-scroller" if.bind="user.editing && user.privileges.VIDEO_EDITOR || cue_points.length>0">
                     <table class="table table-striped table-bordered">
                         <thead>
                         <th css="text-align:${theme.same_dir};" style="width:100px">${'videos.cue-time' & t}</th>
