--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -8,7 +8,7 @@
                 </chat-button>
                 <i class="far fa-lg fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide"
                    click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
-                <i class="far fa-lg fa-arrow-up" t="[title]go-back" click.trigger="go_back()"
+                <i class="far fa-lg fa-arrow-up" t="[title]go-back" click.trigger="go_back($event)"
                    if.bind="theme.is_desktop"></i>
                 <i class="far fa-lg fa-arrow-up fa-rotate-270 ${prev_class}" t="[title]photos.prev-slide"
                    click.trigger="go_prev($event)" if.bind="photo_ids.length > 1"></i>
