--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -97,11 +97,12 @@
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
                             <div class="outer-story-preview" click.delegate="jump_to_the_full_story($event, story)">
                                 <!--<div style="margin-bottom: 10px;" aubs-tooltip="text.bind:story.topics">-->
-                                <div class="story-preview" style="margin-bottom: 10px;" if.bind="used_for!=8">
+                                <div class="story-preview" style="margin-bottom: 10px;" if.bind="used_for!=18">
                                     <div>
                                         <img if.bind="used_for==3" src.bind="story.photo_src" width="140" />
                                         <img if.bind="used_for==9" src.bind="story.doc_jpg_url" width="140" />
                                         <img if.bind="used_for==1" src.bind="story.profile_photo_path" width="120" style="border-radius: 50%;" />
+                                        <img if.bind="used_for==8" src.bind="thumbnail(story.video_src)" width="140"/>
                                         <audio controls if.bind="used_for==10">
                                             <source src="${story.audio_path}" type="audio/mpeg">
                                         </audio>
@@ -115,15 +116,7 @@
                                         class="story-body">
                                     </editable>
                                 </div>
-                                <div class="video-panel" if.bind="used_for==8" style="position:relative">
-                                    <iframe class="video-iframe" src.bind="story.video_src" frameborder="0"
-                                        allowfullscreen="">
-                                    </iframe>
-                                    <span class="video-name" style="position:absolute;padding-right:20px;">
-                                        ${story.name}
-                                    </span>
-                                </div>
-                            </div>
+                           </div>
                         </li>
                     </ul>
 
