--- a/src/user/feedback.html
+++ b/src/user/feedback.html
@@ -35,7 +35,7 @@
                             <input type="text" name="name" id="name" class="form-control input-sm lowercase" value.bind="params.feedback_name" t="[placeholder]feedback.name">
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control input-sm lowercase" value.bind="params.feedback_email" t="[placeholder]feedback.email-address">
+                            <input type="email" name="email" id="email" required class="form-control input-sm lowercase" value.bind="params.feedback_email" t="[placeholder]feedback.email-address">
                         </div>
                     </form>
                 </div>
