--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -4,14 +4,14 @@
             <div class="row">
                 <div class="col-md-9" if.bind="! editing_filters">
                     <div class="row" style="margin-bottom:15px;">
-                        <div class="col-md-10 col-md-offset-1 ctrls-group">
+                        <div class="col-md-12 ctrls-group">
                             <button class="btn btn-basic btn-sm btn-framed"
                                     if.bind="! theme.is_desktop"
                                     click.delegate="show_filters_only()"
                                     css="margin-${theme.other_dir}:6px;margin-${theme.same_dir}:-16px;">
                                 ${'videos.edit-filters' & t}
                             </button>
-                            <div class="input-group" id="videos-name-search">
+                            <div class="input-group" id="videos-name-search" style="margin:0px 3px;">
                                 <search-input value.bind="filter" placeholder="videos.filter"
                                               height="30"></search-input>
                             </div>
@@ -22,12 +22,21 @@
                                     ${'videos.new' & t}
                                 </button>
                             </div>
-                            <div if.bind="user.editing && selected_videos.size > 0 && user.privileges.ADMIN"
+                            <div if.bind="phase=='videos-were-selected' && user.privileges.ADMIN"
                                  class="ctrl">
                                 <button
                                         class="btn btn-default btn-md"
                                         click.trigger="promote_videos()">
                                     ${'videos.promote-selected-videos' & t}
+                                </button>
+                            </div>
+                            <div if.bind="phase=='videos-were-selected' && user.privileges.ADMIN"
+                                 class="ctrl">
+                                <button
+                                        class="btn btn-warning btn-md"
+                                        click.trigger="delete_videos()">
+                                        <i class="fas fa-trash-alt" click.delegate="delete_video(video)"></i>
+                                    <!--span>${'videos.delete-selected-videos' & t}</span-->
                                 </button>
                             </div>
                             <div if.bind="phase=='videos-were-selected'" class="ctrl">
@@ -53,7 +62,7 @@
                                 </button>
                                 <help topic="photos.can-create-group" , position="bottom"></help>
                             </div>
-                            <div class="form-group" if.bind="user.editing" style="margin-top:4px;margin-bottom:0px;">
+                            <div class="form-group" if.bind="user.editing" style="margin-top:0px;margin-bottom:0px;">
                                 <help topic="how-to-select-videos" position="bottom"></help>
                             </div>
                         </div>
@@ -65,8 +74,8 @@
                             <div repeat.for="video of video_list | filter: filter : '*selected' : 'name'"
                                 class="fr-video fr-fvc fr-draggable fr-dvi"
                                 contenteditable="false" draggable="true">
-                                <div style="margin:0px 6px 6px;cursor:pointer;width:257px;overflow:hidden;" click.delegate="view_video(video, $event)">
-                                    <img src.bind="video.thumbnail_url" width="257"/>
+                                <div style="margin:0px 6px 6px;cursor:pointer;width:257px;overflow:hidden;">
+                                    <img src.bind="video.thumbnail_url" width="257" click.delegate="view_video(video, $event)"/>
                                     <span class="video-name" style="margin-top:-6px;">
                                         <span>
                                             <info title.bind="video_info_title(video)"
@@ -75,7 +84,6 @@
                                         <span if.bind="user.editing">
                                             <i class="fa${video.selected ? 's' : 'r'} fa-circle"
                                                click.delegate="toggle_selection(video, $event, $index)"></i>
-                                            <i class="fas fa-trash-alt" click.delegate="delete_video(video)"></i>
                                             <i class="fas fa-pencil" click.delegate="edit_video_info(video)"></i>
                                         </span>
                                         <span>
