--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -3,7 +3,7 @@
         interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="drag_photos($event)"
         interact-dragstart.delegate="on_drag_start($event)" interact-dragend.delegate="on_drag_end($event)"
         click.delegate="dragging = false">
-        <img repeat.for="slide of slides" draggable="false" id="img-${slide.photo_id}" src="${slide.src}"
+        <img repeat.for="slide of slides" draggable="false" id="img-${slide.photo_id}" src="${slide.src}" height="${height}"
             aubs-tooltip="text.bind:slide.title" click.delegate="on_click($event, slide)" />
     </div>
     <div class="slide-control prev" style="top:87%;left:6px;" click.delegate="goto_photo_table()" t="[title]photos.show-in-photo-page" >
