--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -20,7 +20,7 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
                         <form style="display:flex;height:34px;">
-                            <div class="input-group" if.bind="user.advanced_user">
+                            <div class="input-group search-box ${theme.rtltr}" if.bind="user.advanced_user">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
                             </div>
                             <div class="input-group" if.bind="user.privileges.EDITOR" style="width:144px;margin-right:6px;">
@@ -76,7 +76,9 @@
                                 </button>
                             </div>
                             <div class="form-group toolbar" if.bind="can_pair_photos">
-                                <button t="[title]photos.pair" class="btn btn-basic btn-md" click.delegate="pair_selected_photos()"><i class="far fa-yin-yang"></i></i></button>
+                                <button t="[title]photos.pair" class="btn btn-basic btn-md" click.delegate="pair_selected_photos()">
+                                    <i class="far fa-yin-yang"></i>
+                                </button>
                             </div>
                             <div class="form-group" if.bind="phase=='photos-ready-to-edit' && ! after_upload">
                                 <help topic="photos-ready-to-edit" position="bottom"></help>
