changes for mobiles

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -106,8 +106,9 @@
                      ref="life_summary_box1"
                     if.bind="story_0.story_text == '' && ! user.privileges.EDITOR && ! user.editing">
                 </div>
-                <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box"
-                        if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
+                <div class="col-md-6 col-sm-12 fr-view life-summary has-life"
+                     ref="life_summary_box"
+                     if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' & t} ${member_info.first_name}
                     </h4>
