--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -113,7 +113,7 @@
                         ${'members.life-summary' & t} ${member_info.first_name}
                     </h4>
                     <i class="fa fa-expand fa-lg"
-                        show.bind="member.member_stories.length > 1 && !life_summary_expanded"
+                        show.bind="theme.is_desktop && member.member_stories.length > 1 && !life_summary_expanded"
                         style="margin-left:32px;float:left;cursor:pointer;"
                         aubs-tooltip="text.bind:expand"
                         click.trigger="toggle_life_summary_size($event)">
@@ -197,10 +197,10 @@
                     </div>
                 </div>
                 <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)">
-                    <i class="far fa-chevron-right fa-3x"></i>
+                    <i class="fas fa-chevron-right fa-2x"></i>
                 </div>
                 <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)">
-                    <i class="far fa-chevron-left fa-3x"></i>
+                    <i class="fas fa-chevron-left fa-2x"></i>
                 </div>
             </div>
         </div>
