--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -23,11 +23,10 @@
         </div>
         <div class="video-detail-body">
 
-            <div class="data-area" if.bind="theme.is_desktop">
+            <div class="data-area">
                 <div if.bind="! user.editing" class="row video-story" style="margin-top:8px;">
                     <div class="fr-view" dir="${story_dir}">
-                        <div class="${theme.font_size}"
-                             style="position:relative;height:50vh;margin-right:16px;overflow:auto;">
+                        <div class="${theme.font_size} video-story-area">
                             <p class="${story_dir} ${highlight_on}">
                                 <compose if.bind="video_story.story_text"
                                          view-model='../stories/render-story'
@@ -43,7 +42,7 @@
                               story.bind="video_story">
                     </editable>
                 </div>
-                <div class="multi-select-div" style="margin-bottom:65px;position:relative;" if.bind="user.editing">
+                <div class="multi-select-div" style="min-height:272px;overflow:hidden;position:relative;" if.bind="user.editing">
                     <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                         ${'stories.categories' & t}
                     </div>
@@ -56,7 +55,7 @@
                 </div>
                 <div class="multi-select-div"
                      if.bind="user.editing"
-                     dir="${theme.rtltr}" style="width:100%;margin-top:100px;">
+                     dir="${theme.rtltr}" style="width:100%;">
                     <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                         ${'photos.photographers' & t}
                     </div>
@@ -76,7 +75,7 @@
                     </span>
                 </div>
                 <div if.bind="video_date_str || user.editing"
-                     style="margin-top: 50px;margin-left:14px;width:50%;">
+                     class.bind="video_dates_class">
                     <date-range label="stories.story-date" base_date_str.bind="video_date_str"
                                 range_options.bind="[1,2,3,5,10,15,20,30,50,100]"
                                 is_valid.bind="video_date_valid"
