--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -1,5 +1,5 @@
 <template>
-    <section class="container content-area photos" css="height: ${win_height-304}px;">
+    <section class="container content-area" css="height: ${win_height-304}px;">
         <div class="video-page row content-area">
             <div class="row">
                 <div class="col-md-9" if.bind="! editing_filters">
